[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "libgp"
version = "0.2.0"
description = "C++ Library for Gaussian Process Regression"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "libgp contributors"}
]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["flake8>=6.0.0"]

[tool.scikit-build]
cmake.version = ">=3.14"
cmake.args = [
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DBUILD_SHARED_LIBS=OFF",
    "-DLIBGP_BUILD_TESTS=OFF",
    "-DLIBGP_BUILD_EXAMPLES=OFF",
    "-DCMAKE_POSITION_INDEPENDENT_CODE=ON",
]

[tool.scikit-build.cmake.define]
CMAKE_INSTALL_LIBDIR = "lib"